--- a/Projects/visualisation-of-oil-production.html
+++ b/Projects/visualisation-of-oil-production.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Visualisation of Oil Production</title>
         <meta charset="utf-8" />
-        <meta name="image" property="og:image" content= https://ramikhrais.github.io/ramikhrais.github.io/images/us-oil-production.png">
+        <meta name="image" property="og:image" content= "https://ramikhrais.github.io/ramikhrais.github.io/images/us-oil-production.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="../assets/css/obsidian.css">
