--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">004748637337</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">rami.khrais/a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
