--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">rami.khrais/a></p>
+								<p><a href="#">rami.khrais@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
