--- a/Projects/forecasting-brent-crude-price.html
+++ b/Projects/forecasting-brent-crude-price.html
@@ -70,7 +70,7 @@
 
                                 <h2>Methodology</h2>
 
-                                <p><strong>1- Identification:</strong></p>
+                                <h3>1- Identification:</h3>
 
                                 <p>Following the Box-Jenkins method, the first step in building our econometric model should be started with the assessment of the stationarity of the time series under consideration. If the time series proves to be non-stationary, it should be differenced until it becomes stationary.</p>
 
