--- a/Projects/visualisation-of-oil-production.html
+++ b/Projects/visualisation-of-oil-production.html
@@ -127,7 +127,7 @@
 
                                 <img src="../images/opec-five.png" alt="">
 
-                                <h2>Importing and Cleaning BP Data for Oil Production</h2>
+                                <h2>Importing BP Data for Oil Production</h2>
 
                                 <pre><code>bp <- read_excel("C:/Users/Rami/Desktop/BPStats.xlsx", sheet = 6, skip = 2)
                                     glimpse(bp</code></pre>
@@ -192,7 +192,7 @@
                                     ## $ `2006-16`                <chr> NA, "6.1238122797292904E-2", "3.37221...
                                     ## $ `2017__2`                <chr> NA, "0.14093023232708649", "5.2139232...</code></pre>
 
-                                <p>The data looks a bit dirty. Let’s do some cleaning here.</p>
+                                <h2>Data Cleaning</h2>
 
                                 <pre><code>#Changing the column name of “Thousand Barrels”
 
