--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
@@ -77,20 +77,20 @@
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</form>
-						</section>
+						</section> -->
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>Jernbaneveien 39<br />
+                                    Stabekk, 1369</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
+								<p><a href="#">004748637337</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">rami.khrais@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
