--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 										<h2><a href="../ramikhrais.github.io/Projects/linear-regression-analysis.html">Linear Regression Analysis: Estimation of the Aggregate Consumption Equation<br />
 										</a></h2>
 									</header>
-									<a href="./Projects/linear-regression-analysis.html" class="image fit"><img src="../ramikhrais.github.io/images/residual-analysis.png" alt="" /></a>
+									<a href="./Projects/linear-regression-analysis.html" class="image fit"><img src="../ramikhrais.github.io/images/linear.png" alt="" /></a>
 									<p>In this project, I have used the linear regression model in order to investigate the realtionship between the disposable income per capita and the agggregate demand in the Palestinian territories.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/linear-regression-analysis.html" class="button">Check it Out</a></li>
