--- a/Projects/linear-regression-analysis.html
+++ b/Projects/linear-regression-analysis.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="../assets/css/obsidian.css">
+		<meta name="image" property="og:image" content="../ramikhrais.github.io/images/regression-analysis-01.png">
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
