--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									</a></h2>
 									</header>
 									<a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html" class="image fit"><img src="../ramikhrais.github.io/images/time-series.png" alt="" /></a>
-									<p>In this project, I tried to explain the basics of the time series analysis and the technieques used for spotting their characteristics using the suitable statistical tests.</p>
+									<p>In this project, I tried to explain the basics of the time series analysis and the techniques used for spotting their characteristics using the suitable statistical tests.</p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html" class="button">Check it Out</a></li>
 									</ul>
@@ -109,7 +109,7 @@
 										</a></h2>
 									</header>
 									<a href="./Projects/linear-regression-analysis.html" class="image fit"><img src="../ramikhrais.github.io/images/regression-analysis-01.png" alt="" /></a>
-									<p>In this project, I have used the linear regression model in order to investigate the realtionship between the disposable income per capita and the agggregate demand in the Palestinian territories.</p>
+									<p>In this project, I have used the linear regression model in order to investigate the relationship between the disposable income per capita and the aggregate demand in the Palestinian territories.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/linear-regression-analysis.html" class="button">Check it Out</a></li>
 									</ul>
@@ -126,7 +126,7 @@
 										</a></h2>
 									</header>
 									<a href="../ramikhrais.github.io/Projects/analysis-of-airlines-market-in-us.html" class="image fit"><img src="../ramikhrais.github.io/images/delta-airline.jpg" alt="" /></a>
-									<p>In this porject, I did analyse the most important trends in the US's airlines market in 2011. The datasets that has been analysed spots the activity of 15 carries.</p>
+									<p>In this project, I did analyse the most important trends in the US's airlines market in 2011. The dataset that has been analysed spots the activity of 15 carries.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/analysis-of-airlines-market-in-us.html" class="button">Check it Out</a></li>
 									</ul>
